[package]
name = "rc-cell"
version = "0.1.0"
authors = ["Adam Spofford <pieflavor.mc@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["memory-management"]
keywords = ["cell", "rc", "refcell"]
homepage = "https://github.com/pie-flavor/rc_cell"
repository = "https://github.com/pie-flavor/rc_cell.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
